--- a/frr.yaml
+++ b/frr.yaml
@@ -1,9 +1,13 @@
 name: frr
 container:
+  environment:
+  - IPV4_NODE_NUMBER=$IPV4_NODE_NUMBER
+  - NODE_IP=$NODE_IP
+  - ASN_LOCAL=$ASN_LOCAL
   entrypoint: /sbin/tini
   args:
-    - --
-    - /usr/lib/frr/docker-start
+  - --
+  - /usr/lib/frr/docker-start
   security:
     writeableRootfs: true
     writeableSysfs: true
