--- a/frr.yaml
+++ b/frr.yaml
@@ -1,5 +1,16 @@
 name: frr
 container:
+  environment:
+  - ASN_METALLB_LOCAL=4200099998
+  - ASN_METALLB_REMOTE=4200099999
+  - NAMESPACE_METALLB=metallb
+  - PEER_IP_LOCAL=192.168.250.254
+  - PEER_IP_REMOTE=192.168.250.255
+  - PEER_IP_PREFIX=31
+  - PEER_V6ONLY=yes
+  - INTERFACE_MTU=1500
+  - 'NODE_IP="${NODE_IP}"'
+  - 'ASN_LOCAL="${ASN_LOCAL}"'
   depends:
     configuration: true
     network:
