--- a/frr.yaml
+++ b/frr.yaml
@@ -9,16 +9,15 @@ container:
   - PEER_IP_PREFIX=31
   - PEER_V6ONLY=yes
   - INTERFACE_MTU=1500
-  - 'NODE_IP="${NODE_IP}"'
-  - 'ASN_LOCAL="${ASN_LOCAL}"'
   depends:
     configuration: true
     network:
     - connectivity
-  entrypoint: /sbin/tini
-  args:
-  - --
-  - /usr/lib/frr/docker-start
+  entrypoint: /usr/lib/frr/docker-start
+  # entrypoint: /sbin/tini
+  # args:
+  # - --
+  # - /usr/lib/frr/docker-start
   security:
     writeableRootfs: true
     writeableSysfs: true
